# ComfyUI-XY-Grid-Sidebar

./: CLAUDE.md  LICENSE  README.md  __init__.py  assemble.py  pyproject.toml
web/: axis_section.js  session.js  xy_grid.css  xy_grid.js
